Minor code syntax and style changes, clean up visibility, CSS styling more correct

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,275 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: "Didact Gothic", "Meiryo UI";
+  width: 100%;
+  margin-top: 0;
+  background-size: 100% 100%;
 }
+
+nav {
+  background-color: #f5f5f5;
+}
+
+nav ul a {
+  font-size: 1.02rem;
+}
+
+p {
+  font-size: 1.02rem;
+}
+
+span {
+  color: #bc002d;
+}
+
+li .active {
+  color: #bc002d;
+}
+
+a {
+  color: #ff9800;
+}
+
+.nihon-banner {
+	color: white;
+  text-shadow: 2px 2px 5px black;
+  background: url(https://i.imgur.com/ELpAftG.jpg?1) no-repeat center center;
+}
+
+.nihon-banner .row {
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
+.nav-wrapper {
+	padding: 0 43px 0 43px;
+}
+
+.nav-wrapper a{
+  color: black;
+}
+
+.dropdown-content li a {
+  color: black;
+}
+
+.lang-switch {
+  background: #e0e0e0;
+}
+
+.row .low-margin {
+  margin-bottom: 7px;
+}
+
+.nihon-red {
+  background-color: #bc002d
+}
+
+.display-linebreak {
+  white-space: pre-line;
+}
+
+.page-btn {
+  margin-top: 20px;
+  margin-right: 10px;
+  background-color: #bc002d;
+  transition: background-color 1s ease;
+}
+
+.page-btn:hover, {
+  background-color: #ff9800;
+}
+
+.center-btn {
+  margin-left: 38%
+}
+
+.worksheet-img {
+  border-right: 1px dotted #bc002d;
+  border-bottom: 1px dotted #bc002d;
+}
+
+.pic-expand {
+  width: 550px;
+}
+
+.active-page-btn {
+  background-color: #ff9800;
+}
+
+.modal {
+  max-height: 85% !important;
+  width: 85% !important
+}
+
+.article-card {
+	padding: 8px 24px 24px 24px !important;
+}
+
+.article p {
+  font-size: 1.1rem;
+  margin-bottom: 10px !important;
+  white-space: pre-line;
+}
+
+.de-link {
+  pointer-events: none;
+  cursor: default;
+}
+
+.upload-hr{
+  border-top: 1px dashed #8c8b8b;
+}
+
+.upload-checkbox {
+	padding: 0 10px 0 24px;
+}
+
+#toastSuccess {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: #333; /* Black background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 50%; /* Center the snackbar */
+  bottom: 30px; /* 30px from the bottom */
+}
+
+#toastSuccess.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+}
+
+/* Style the Image Used to Trigger the Modal */
+#myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.img-modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 30px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (Image) */
+.img-modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 800px;
+}
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+/* Add Animation - Zoom in the Modal */
+.img-modal-content, #caption { 
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
+
+/* The Close Button */
+.img-close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.img-close:hover,
+.img-close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
+    }
+}
+
+/* for material icons sizing and theming */
+.material-icons.md-18 {
+  font-size: 18px; }
+.material-icons.md-24 {
+  font-size: 24px; }
+.material-icons.md-36 {
+  font-size: 36px; }
+.material-icons.md-48 {
+  font-size: 48px; }
+.material-icons.md-60 {
+  font-size: 60px; }
+.material-icons.md-dark {
+  color: rgba(0, 0, 0, 0.54); }
+.material-icons.md-dark.md-inactive {
+  color: rgba(0, 0, 0, 0.26); }
+.material-icons.md-span {
+  color: #bc002d; }
+.material-icons.md-light {
+  color: white; }
+.material-icons.md-light.md-inactive {
+  color: rgba(255, 255, 255, 0.3); }
